@startuml
title Logger Class Diagram

enum LogLevel
abstract Logger
class NullLogger
class FunctionPtrLogger
class StreamLogger
class WindowsConsoleLogger

LogLevel o- Logger

Logger <|-- NullLogger
Logger <|-- FunctionPtrLogger
Logger <|-- StreamLogger
StreamLogger <|-- WindowsConsoleLogger

abstract Logger
{
  +LogLevel getLogLevel()
  +void setLogLevel(LogLevel logLevel)
  +void log(LogLevel level, const std::string& message)

  #LogLevel logLevel
  
  #void writeMessageToLog(LogLevel level, const std::string& message);
}

@enduml
